{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 7213,
  "lineage": "571fcb51-5293-1c56-b8f7-2be55b848945",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_instance",
      "name": "emr-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-087ed8cedf87833d1",
            "arn": "arn:aws:ec2:us-east-1:209479308486:instance/i-0dc80c87dddbc9559",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdb",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:209479308486:key/1ba927cb-5216-4003-a8c2-1c2b20f074f8",
                "tags": {
                  "Deployment": "test2",
                  "Environment": "sandbox",
                  "Name": "Etleap EMR test2",
                  "Operator": "Benedict.Chan"
                },
                "throughput": 125,
                "volume_id": "vol-0fe639fb871f02c01",
                "volume_size": 128,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "filter": [
              {
                "name": "network-interface.private-dns-name",
                "values": [
                  "ip-172-22-5-180.ec2.internal"
                ]
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "iam_instance_profile": "EtleapEMRProfile-test2-9cb94f",
            "id": "i-0dc80c87dddbc9559",
            "instance_state": "running",
            "instance_type": "m7i.xlarge",
            "key_name": "Etleap-Benedict",
            "launch_time": "2026-07-14T10:51:31Z",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-0097f8f8da960fe52",
            "placement_partition_number": 0,
            "private_dns": "ip-172-22-5-180.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.22.5.180",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:209479308486:key/1ba927cb-5216-4003-a8c2-1c2b20f074f8",
                "tags": {
                  "Deployment": "test2",
                  "Environment": "sandbox",
                  "Name": "Etleap EMR test2",
                  "Operator": "Benedict.Chan"
                },
                "throughput": 125,
                "volume_id": "vol-02c4c1edcc5a3270b",
                "volume_size": 15,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ba0b865118de2ace",
            "tags": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap EMR test2",
              "Operator": "Benedict.Chan"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00b3f498e5f1b171d",
              "sg-09d12e2964da7c4f7"
            ]
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b406011bcb13dd84",
            "arn": "arn:aws:ec2:us-east-1:209479308486:elastic-ip/eipalloc-0b406011bcb13dd84",
            "domain": "vpc",
            "id": "eipalloc-0b406011bcb13dd84",
            "network_border_group": "us-east-1",
            "private_dns": "ip-172-22-7-118.ec2.internal",
            "public_dns": "ec2-100-52-154-41.compute-1.amazonaws.com",
            "public_ip": "100.52.154.41",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Operator": "Benedict.Chan"
            },
            "tags_all": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Operator": "Benedict.Chan"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c8380aa4368b10f5",
            "arn": "arn:aws:ec2:us-east-1:209479308486:instance/i-0f4669ccc709985fd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f4669ccc709985fd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5n.large",
            "ipv6_address_count": 0,
            "key_name": "Etleap-Benedict",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04d88d5ba78891974",
            "private_dns": "ip-172-22-7-71.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.22.7.71",
            "public_dns": "ec2-44-206-238-157.compute-1.amazonaws.com",
            "public_ip": "44.206.238.157",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:209479308486:key/68a29d3d-82f9-4fe5-9f4c-4345c12efc3c",
                "throughput": 125,
                "volume_id": "vol-0378d2d97685f2a0e",
                "volume_size": 32,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0be8e11b37ab2010f",
            "tags": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap NAT test2",
              "Operator": "Benedict.Chan"
            },
            "tags_all": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap NAT test2",
              "Operator": "Benedict.Chan"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap NAT",
              "Operator": "Benedict.Chan"
            },
            "vpc_security_group_ids": [
              "sg-0be47893ef9e46a13"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.ssh",
            "module.vpc.aws_security_group.nat",
            "module.vpc.aws_subnet.b_public",
            "module.vpc.aws_vpc.etleap",
            "module.vpc.data.aws_ami.nat",
            "module.vpc.data.aws_region.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "zookeeper",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e0a4106402da2799",
            "arn": "arn:aws:ec2:us-east-1:209479308486:instance/i-04c26ecdb34663951",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvdb",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:209479308486:key/68a29d3d-82f9-4fe5-9f4c-4345c12efc3c",
                "snapshot_id": "snap-0c7b7b571eb55b55e",
                "throughput": 125,
                "volume_id": "vol-0c9ae5b7724a35803",
                "volume_size": 32,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "Etleap-Zookeeper_iam_profile-test2-9cb94f",
            "id": "i-04c26ecdb34663951",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "Etleap-Benedict",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-076b5440ab92b555b"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-076b5440ab92b555b",
            "private_dns": "ip-172-22-5-82.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.22.5.82",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:209479308486:key/68a29d3d-82f9-4fe5-9f4c-4345c12efc3c",
                "throughput": 125,
                "volume_id": "vol-0201f53b6f11eb0a7",
                "volume_size": 32,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ba0b865118de2ace",
            "tags": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap zookeeper1 test2",
              "Operator": "Benedict.Chan"
            },
            "tags_all": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap zookeeper1 test2",
              "Operator": "Benedict.Chan"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "volume_tags": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap zookeeper1 test2",
              "Operator": "Benedict.Chan"
            },
            "vpc_security_group_ids": [
              "sg-0e2357864c06db9c1"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.ssh",
            "module.vpc.aws_iam_instance_profile.zookeeper",
            "module.vpc.aws_iam_role.zookeeper",
            "module.vpc.aws_network_interface.zookeeper",
            "module.vpc.aws_s3_bucket.intermediate",
            "module.vpc.aws_s3_object.customer_post_install_script",
            "module.vpc.aws_security_group.zookeeper",
            "module.vpc.aws_subnet.a_private",
            "module.vpc.aws_subnet.b_private",
            "module.vpc.aws_subnet.c_private",
            "module.vpc.aws_vpc.etleap",
            "module.vpc.data.aws_region.current",
            "module.vpc.module.deployment_secret.aws_secretsmanager_secret.secret",
            "module.vpc.random_id.deployment_random"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e0a4106402da2799",
            "arn": "arn:aws:ec2:us-east-1:209479308486:instance/i-07f017b252a4f930d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvdb",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:209479308486:key/68a29d3d-82f9-4fe5-9f4c-4345c12efc3c",
                "snapshot_id": "snap-0c7b7b571eb55b55e",
                "throughput": 125,
                "volume_id": "vol-0b68e058192ca8b15",
                "volume_size": 32,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "Etleap-Zookeeper_iam_profile-test2-9cb94f",
            "id": "i-07f017b252a4f930d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "Etleap-Benedict",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-09e3004f92ca244e9"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09e3004f92ca244e9",
            "private_dns": "ip-172-22-6-181.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.22.6.181",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:209479308486:key/68a29d3d-82f9-4fe5-9f4c-4345c12efc3c",
                "throughput": 125,
                "volume_id": "vol-09a472369957994de",
                "volume_size": 32,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ef6095787e00a891",
            "tags": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap zookeeper2 test2",
              "Operator": "Benedict.Chan"
            },
            "tags_all": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap zookeeper2 test2",
              "Operator": "Benedict.Chan"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "volume_tags": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap zookeeper2 test2",
              "Operator": "Benedict.Chan"
            },
            "vpc_security_group_ids": [
              "sg-0e2357864c06db9c1"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.ssh",
            "module.vpc.aws_iam_instance_profile.zookeeper",
            "module.vpc.aws_iam_role.zookeeper",
            "module.vpc.aws_network_interface.zookeeper",
            "module.vpc.aws_s3_bucket.intermediate",
            "module.vpc.aws_s3_object.customer_post_install_script",
            "module.vpc.aws_security_group.zookeeper",
            "module.vpc.aws_subnet.a_private",
            "module.vpc.aws_subnet.b_private",
            "module.vpc.aws_subnet.c_private",
            "module.vpc.aws_vpc.etleap",
            "module.vpc.data.aws_region.current",
            "module.vpc.module.deployment_secret.aws_secretsmanager_secret.secret",
            "module.vpc.random_id.deployment_random"
          ]
        },
        {
          "index_key": "3",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e0a4106402da2799",
            "arn": "arn:aws:ec2:us-east-1:209479308486:instance/i-0458aa1d5d34c0560",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvdb",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:209479308486:key/68a29d3d-82f9-4fe5-9f4c-4345c12efc3c",
                "snapshot_id": "snap-0c7b7b571eb55b55e",
                "throughput": 125,
                "volume_id": "vol-046dade5e49d4c1f5",
                "volume_size": 32,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "Etleap-Zookeeper_iam_profile-test2-9cb94f",
            "id": "i-0458aa1d5d34c0560",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "Etleap-Benedict",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0a9967da28ddf65d3"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a9967da28ddf65d3",
            "private_dns": "ip-172-22-4-184.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.22.4.184",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:209479308486:key/68a29d3d-82f9-4fe5-9f4c-4345c12efc3c",
                "throughput": 125,
                "volume_id": "vol-0932d22db023b383c",
                "volume_size": 32,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-068c886b86199179c",
            "tags": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap zookeeper3 test2",
              "Operator": "Benedict.Chan"
            },
            "tags_all": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap zookeeper3 test2",
              "Operator": "Benedict.Chan"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "volume_tags": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap zookeeper3 test2",
              "Operator": "Benedict.Chan"
            },
            "vpc_security_group_ids": [
              "sg-0e2357864c06db9c1"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.ssh",
            "module.vpc.aws_iam_instance_profile.zookeeper",
            "module.vpc.aws_iam_role.zookeeper",
            "module.vpc.aws_network_interface.zookeeper",
            "module.vpc.aws_s3_bucket.intermediate",
            "module.vpc.aws_s3_object.customer_post_install_script",
            "module.vpc.aws_security_group.zookeeper",
            "module.vpc.aws_subnet.a_private",
            "module.vpc.aws_subnet.b_private",
            "module.vpc.aws_subnet.c_private",
            "module.vpc.aws_vpc.etleap",
            "module.vpc.data.aws_region.current",
            "module.vpc.module.deployment_secret.aws_secretsmanager_secret.secret",
            "module.vpc.random_id.deployment_random"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "etleap",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209479308486:internet-gateway/igw-0d652707937250ab2",
            "id": "igw-0d652707937250ab2",
            "owner_id": "209479308486",
            "tags": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap IG",
              "Operator": "Benedict.Chan"
            },
            "tags_all": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap IG",
              "Operator": "Benedict.Chan"
            },
            "vpc_id": "vpc-0a3da344f06a25bb4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.etleap"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:209479308486:loadbalancer/app/etleap20260616135442225500000027/78a43f751feaf58b",
            "arn_suffix": "app/etleap20260616135442225500000027/78a43f751feaf58b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "etleap20260616135442225500000027-1671959891.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:209479308486:loadbalancer/app/etleap20260616135442225500000027/78a43f751feaf58b",
            "idle_timeout": 300,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "etleap20260616135442225500000027",
            "name_prefix": "etleap",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0264fb166e833a732"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0be8e11b37ab2010f"
              },
              {
                "subnet_id": "subnet-0c35b4fa0399d8bcf"
              }
            ],
            "subnets": [
              "subnet-0be8e11b37ab2010f",
              "subnet-0c35b4fa0399d8bcf"
            ],
            "tags": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap LB test2",
              "Operator": "Benedict.Chan"
            },
            "tags_all": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap LB test2",
              "Operator": "Benedict.Chan"
            },
            "vpc_id": "vpc-0a3da344f06a25bb4",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.app",
            "module.vpc.aws_subnet.a_private",
            "module.vpc.aws_subnet.a_public",
            "module.vpc.aws_subnet.b_private",
            "module.vpc.aws_subnet.b_public",
            "module.vpc.aws_vpc.etleap",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:209479308486:listener/app/etleap20260616135442225500000027/78a43f751feaf58b/99f0c24e86dbdfe8",
            "certificate_arn": "arn:aws:acm:us-east-1:209479308486:certificate/862da0c5-655e-4469-89ef-b19ed30cf9bc",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:209479308486:targetgroup/Etleap20260616135438463100000023/891dfd28c8dd1b4d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:209479308486:listener/app/etleap20260616135442225500000027/78a43f751feaf58b/99f0c24e86dbdfe8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:209479308486:loadbalancer/app/etleap20260616135442225500000027/78a43f751feaf58b",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Operator": "Benedict.Chan"
            },
            "tags_all": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Operator": "Benedict.Chan"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_acm_certificate.etleap",
            "module.vpc.aws_lb.app",
            "module.vpc.aws_lb_target_group.app",
            "module.vpc.aws_security_group.app",
            "module.vpc.aws_subnet.a_private",
            "module.vpc.aws_subnet.a_public",
            "module.vpc.aws_subnet.b_private",
            "module.vpc.aws_subnet.b_public",
            "module.vpc.aws_vpc.etleap",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:209479308486:targetgroup/Etleap20260616135438463100000023/891dfd28c8dd1b4d",
            "arn_suffix": "targetgroup/Etleap20260616135438463100000023/891dfd28c8dd1b4d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200,400",
                "path": "/__ver",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:209479308486:targetgroup/Etleap20260616135438463100000023/891dfd28c8dd1b4d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:209479308486:loadbalancer/app/etleap20260616135442225500000027/78a43f751feaf58b"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Etleap20260616135438463100000023",
            "name_prefix": "Etleap",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Operator": "Benedict.Chan"
            },
            "tags_all": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Operator": "Benedict.Chan"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a3da344f06a25bb4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.etleap"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "main_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:209479308486:targetgroup/Etleap20260616135438463100000023/891dfd28c8dd1b4d-20260714105517340900000006",
            "port": 443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:209479308486:targetgroup/Etleap20260616135438463100000023/891dfd28c8dd1b4d",
            "target_id": "i-0493688dcfae6b056"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.ssh",
            "module.vpc.aws_cognito_identity_pool.etleap_azure_identity_pool",
            "module.vpc.aws_db_instance.db",
            "module.vpc.aws_db_parameter_group.mysql8-4-etleap",
            "module.vpc.aws_db_subnet_group.db",
            "module.vpc.aws_dms_replication_instance.dms",
            "module.vpc.aws_dms_replication_subnet_group.dms",
            "module.vpc.aws_dynamodb_table.activity-log",
            "module.vpc.aws_emr_cluster.emr",
            "module.vpc.aws_emr_security_configuration.emrfs_sse_kms",
            "module.vpc.aws_glue_catalog_database.iceberg_system_tables_db",
            "module.vpc.aws_iam_instance_profile.app",
            "module.vpc.aws_iam_instance_profile.emr_profile",
            "module.vpc.aws_iam_role.app",
            "module.vpc.aws_iam_role.dms",
            "module.vpc.aws_iam_role.emr",
            "module.vpc.aws_iam_role.emr_default_role",
            "module.vpc.aws_iam_role.intermediate",
            "module.vpc.aws_instance.nat",
            "module.vpc.aws_internet_gateway.etleap",
            "module.vpc.aws_kms_key.etleap_emr_ebs_encryption_key",
            "module.vpc.aws_kms_key.etleap_encryption_key",
            "module.vpc.aws_lb.app",
            "module.vpc.aws_lb_target_group.app",
            "module.vpc.aws_network_interface.main_app",
            "module.vpc.aws_network_interface.zookeeper",
            "module.vpc.aws_route.prod_public",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_s3_bucket.intermediate",
            "module.vpc.aws_s3_object.customer_post_install_script",
            "module.vpc.aws_s3_object.db_init_script",
            "module.vpc.aws_s3_object.influx_db_init_script",
            "module.vpc.aws_secretsmanager_secret.influx_db_api_token",
            "module.vpc.aws_security_group.app",
            "module.vpc.aws_security_group.db",
            "module.vpc.aws_security_group.dms",
            "module.vpc.aws_security_group.emr",
            "module.vpc.aws_security_group.emr-master-managed",
            "module.vpc.aws_security_group.emr-service-access-managed",
            "module.vpc.aws_security_group.emr-slave-managed",
            "module.vpc.aws_security_group.influxdb",
            "module.vpc.aws_security_group.nat",
            "module.vpc.aws_security_group.zookeeper",
            "module.vpc.aws_ssm_parameter.emr_cluster_id",
            "module.vpc.aws_subnet.a_private",
            "module.vpc.aws_subnet.a_public",
            "module.vpc.aws_subnet.b_private",
            "module.vpc.aws_subnet.b_public",
            "module.vpc.aws_subnet.c_private",
            "module.vpc.aws_timestreaminfluxdb_db_instance.influx_db",
            "module.vpc.aws_vpc.etleap",
            "module.vpc.data.aws_ami.nat",
            "module.vpc.data.aws_caller_identity.current",
            "module.vpc.data.aws_iam_policy_document.dms_assume_role",
            "module.vpc.data.aws_region.current",
            "module.vpc.data.aws_secretsmanager_secret_version.influx_db_password",
            "module.vpc.module.admin_password.aws_secretsmanager_secret.secret",
            "module.vpc.module.db_password.aws_secretsmanager_secret.secret",
            "module.vpc.module.db_root_password.aws_secretsmanager_secret.secret",
            "module.vpc.module.db_root_password.aws_secretsmanager_secret_version.secret",
            "module.vpc.module.db_root_password.random_password.secret_value",
            "module.vpc.module.db_support_password.aws_secretsmanager_secret.secret",
            "module.vpc.module.deployment_secret.aws_secretsmanager_secret.secret",
            "module.vpc.module.elva.aws_iam_user.elva",
            "module.vpc.module.elva.aws_lb.elva",
            "module.vpc.module.elva.aws_security_group.elva-elb",
            "module.vpc.module.inbound_queue.aws_sns_topic.etleap-inbound",
            "module.vpc.module.inbound_queue.aws_sqs_queue.etleap-inbound",
            "module.vpc.module.inbound_queue.aws_sqs_queue.etleap-inbound-dlq",
            "module.vpc.module.influx_db_password.aws_secretsmanager_secret.secret",
            "module.vpc.module.influx_db_password.aws_secretsmanager_secret_version.secret",
            "module.vpc.module.influx_db_password.random_password.secret_value",
            "module.vpc.module.main_app.aws_instance.app",
            "module.vpc.module.setup_password.aws_secretsmanager_secret.secret",
            "module.vpc.module.setup_password.aws_secretsmanager_secret_version.secret",
            "module.vpc.module.setup_password.random_password.secret_value",
            "module.vpc.null_resource.are_influx_db_hostname_and_password_valid",
            "module.vpc.null_resource.emr_configuration_change",
            "module.vpc.random_id.deployment_random"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "main_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209479308486:network-interface/eni-08888cdc8cb13d3df",
            "id": "eni-08888cdc8cb13d3df",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:5c:21:f4:57:8d",
            "owner_id": "209479308486",
            "private_dns_name": "ip-172-22-5-133.ec2.internal",
            "private_ip": "172.22.5.133",
            "private_ip_list": [
              "172.22.5.133"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "172.22.5.133"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0264fb166e833a732"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ba0b865118de2ace",
            "tags": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Operator": "Benedict.Chan"
            },
            "tags_all": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Operator": "Benedict.Chan"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.app",
            "module.vpc.aws_subnet.b_private",
            "module.vpc.aws_vpc.etleap",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "zookeeper",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209479308486:network-interface/eni-076b5440ab92b555b",
            "id": "eni-076b5440ab92b555b",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:a6:45:be:f6:7f",
            "owner_id": "209479308486",
            "private_dns_name": "ip-172-22-5-82.ec2.internal",
            "private_ip": "172.22.5.82",
            "private_ip_list": [
              "172.22.5.82"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "172.22.5.82"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0e2357864c06db9c1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ba0b865118de2ace",
            "tags": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Operator": "Benedict.Chan"
            },
            "tags_all": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Operator": "Benedict.Chan"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.zookeeper",
            "module.vpc.aws_subnet.a_private",
            "module.vpc.aws_subnet.b_private",
            "module.vpc.aws_subnet.c_private",
            "module.vpc.aws_vpc.etleap",
            "module.vpc.data.aws_region.current"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209479308486:network-interface/eni-09e3004f92ca244e9",
            "id": "eni-09e3004f92ca244e9",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:ff:ee:9a:33:53",
            "owner_id": "209479308486",
            "private_dns_name": "ip-172-22-6-181.ec2.internal",
            "private_ip": "172.22.6.181",
            "private_ip_list": [
              "172.22.6.181"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "172.22.6.181"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0e2357864c06db9c1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ef6095787e00a891",
            "tags": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Operator": "Benedict.Chan"
            },
            "tags_all": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Operator": "Benedict.Chan"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.zookeeper",
            "module.vpc.aws_subnet.a_private",
            "module.vpc.aws_subnet.b_private",
            "module.vpc.aws_subnet.c_private",
            "module.vpc.aws_vpc.etleap",
            "module.vpc.data.aws_region.current"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209479308486:network-interface/eni-0a9967da28ddf65d3",
            "id": "eni-0a9967da28ddf65d3",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:e8:6c:e7:e1:ff",
            "owner_id": "209479308486",
            "private_dns_name": "ip-172-22-4-184.ec2.internal",
            "private_ip": "172.22.4.184",
            "private_ip_list": [
              "172.22.4.184"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "172.22.4.184"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0e2357864c06db9c1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-068c886b86199179c",
            "tags": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Operator": "Benedict.Chan"
            },
            "tags_all": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Operator": "Benedict.Chan"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.zookeeper",
            "module.vpc.aws_subnet.a_private",
            "module.vpc.aws_subnet.b_private",
            "module.vpc.aws_subnet.c_private",
            "module.vpc.aws_vpc.etleap",
            "module.vpc.data.aws_region.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e8c18b8d704143281080289494",
            "instance_id": "i-0f4669ccc709985fd",
            "instance_owner_id": "209479308486",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-04d88d5ba78891974",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e8c18b8d70414328",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.ssh",
            "module.vpc.aws_instance.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_security_group.nat",
            "module.vpc.aws_subnet.b_public",
            "module.vpc.aws_vpc.etleap",
            "module.vpc.data.aws_ami.nat",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "prod_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d652707937250ab2",
            "id": "r-rtb-0f01ac4118dfd5f8e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f01ac4118dfd5f8e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.etleap",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.etleap"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209479308486:route-table/rtb-0e8c18b8d70414328",
            "id": "rtb-0e8c18b8d70414328",
            "owner_id": "209479308486",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-0d1fa4ed723c5e2ed",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap Private test2",
              "Operator": "Benedict.Chan"
            },
            "tags_all": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap Private test2",
              "Operator": "Benedict.Chan"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3da344f06a25bb4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.etleap"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209479308486:route-table/rtb-0f01ac4118dfd5f8e",
            "id": "rtb-0f01ac4118dfd5f8e",
            "owner_id": "209479308486",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d652707937250ab2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap Public test2",
              "Operator": "Benedict.Chan"
            },
            "tags_all": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap Public test2",
              "Operator": "Benedict.Chan"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3da344f06a25bb4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.etleap"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099e3c90c29f92b08",
            "route_table_id": "rtb-0e8c18b8d70414328",
            "subnet_id": "subnet-068c886b86199179c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.a_private",
            "module.vpc.aws_vpc.etleap",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a806292d7460adb4",
            "route_table_id": "rtb-0f01ac4118dfd5f8e",
            "subnet_id": "subnet-0c35b4fa0399d8bcf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.a_public",
            "module.vpc.aws_vpc.etleap",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f0d410898f5ba52f",
            "route_table_id": "rtb-0e8c18b8d70414328",
            "subnet_id": "subnet-0ba0b865118de2ace"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.b_private",
            "module.vpc.aws_vpc.etleap",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085440462e59bca19",
            "route_table_id": "rtb-0f01ac4118dfd5f8e",
            "subnet_id": "subnet-0be8e11b37ab2010f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.b_public",
            "module.vpc.aws_vpc.etleap",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088b8a42d6bc4929d",
            "route_table_id": "rtb-0e8c18b8d70414328",
            "subnet_id": "subnet-0ef6095787e00a891"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.c_private",
            "module.vpc.aws_vpc.etleap",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ac8150dd7c1d4a6",
            "route_table_id": "rtb-0f01ac4118dfd5f8e",
            "subnet_id": "subnet-0b2e43b4281751a9d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.c_public",
            "module.vpc.aws_vpc.etleap",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209479308486:security-group/sg-0264fb166e833a732",
            "description": "Etleap App",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09d12e2964da7c4f7"
                ],
                "self": true,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2181,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e2357864c06db9c1"
                ],
                "self": false,
                "to_port": 2181
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c546fe9faceb87a8"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8086,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03f646e6afe4e9cfe"
                ],
                "self": false,
                "to_port": 8086
              }
            ],
            "id": "sg-0264fb166e833a732",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09d12e2964da7c4f7"
                ],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "Etleap App",
            "name_prefix": "",
            "owner_id": "209479308486",
            "revoke_rules_on_delete": false,
            "tags": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap App",
              "Operator": "Benedict.Chan"
            },
            "tags_all": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap App",
              "Operator": "Benedict.Chan"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3da344f06a25bb4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.etleap"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209479308486:security-group/sg-0c546fe9faceb87a8",
            "description": "Etleap DB",
            "egress": [],
            "id": "sg-0c546fe9faceb87a8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0264fb166e833a732"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Etleap DB",
            "name_prefix": "",
            "owner_id": "209479308486",
            "revoke_rules_on_delete": false,
            "tags": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap DB",
              "Operator": "Benedict.Chan"
            },
            "tags_all": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap DB",
              "Operator": "Benedict.Chan"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3da344f06a25bb4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.etleap"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209479308486:security-group/sg-0ed7ddcc0d8382d2f",
            "description": "DMS group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0ed7ddcc0d8382d2f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0264fb166e833a732"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "Etleap-DMS",
            "name_prefix": "",
            "owner_id": "209479308486",
            "revoke_rules_on_delete": false,
            "tags": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap DMS Security Group",
              "Operator": "Benedict.Chan"
            },
            "tags_all": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap DMS Security Group",
              "Operator": "Benedict.Chan"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3da344f06a25bb4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.etleap"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "emr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209479308486:security-group/sg-09d12e2964da7c4f7",
            "description": "Etleap EMR Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0264fb166e833a732"
                ],
                "self": true,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2181,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e2357864c06db9c1"
                ],
                "self": false,
                "to_port": 2181
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8086,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03f646e6afe4e9cfe"
                ],
                "self": false,
                "to_port": 8086
              }
            ],
            "id": "sg-09d12e2964da7c4f7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0264fb166e833a732"
                ],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "Etleap EMR",
            "name_prefix": "",
            "owner_id": "209479308486",
            "revoke_rules_on_delete": false,
            "tags": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap EMR",
              "Operator": "Benedict.Chan"
            },
            "tags_all": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap EMR",
              "Operator": "Benedict.Chan"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3da344f06a25bb4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.etleap"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "emr-master-managed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209479308486:security-group/sg-00b3f498e5f1b171d",
            "description": "Rules managed by EMR for EMR master",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08e7327bb8afa4b5e"
                ],
                "self": false,
                "to_port": 9443
              }
            ],
            "id": "sg-00b3f498e5f1b171d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-00cf5a532a6f7fd85"
                ],
                "self": true,
                "to_port": -1
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00cf5a532a6f7fd85"
                ],
                "self": true,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-00cf5a532a6f7fd85"
                ],
                "self": true,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08e7327bb8afa4b5e"
                ],
                "self": false,
                "to_port": 8443
              }
            ],
            "name": "EMR Master Managed",
            "name_prefix": "",
            "owner_id": "209479308486",
            "revoke_rules_on_delete": true,
            "tags": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap EMR Master (managed by EMR)",
              "Operator": "Benedict.Chan"
            },
            "tags_all": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap EMR Master (managed by EMR)",
              "Operator": "Benedict.Chan"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3da344f06a25bb4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.etleap"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "emr-service-access-managed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209479308486:security-group/sg-08e7327bb8afa4b5e",
            "description": "Rules managed by EMR for EMR service access",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00b3f498e5f1b171d",
                  "sg-00cf5a532a6f7fd85"
                ],
                "self": false,
                "to_port": 8443
              }
            ],
            "id": "sg-08e7327bb8afa4b5e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00b3f498e5f1b171d"
                ],
                "self": false,
                "to_port": 9443
              }
            ],
            "name": "EMR Service Access Managed",
            "name_prefix": "",
            "owner_id": "209479308486",
            "revoke_rules_on_delete": true,
            "tags": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap EMR Service Access (managed by EMR)",
              "Operator": "Benedict.Chan"
            },
            "tags_all": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap EMR Service Access (managed by EMR)",
              "Operator": "Benedict.Chan"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3da344f06a25bb4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.etleap"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "emr-slave-managed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209479308486:security-group/sg-00cf5a532a6f7fd85",
            "description": "Rules managed by EMR for EMR slave",
            "egress": [],
            "id": "sg-00cf5a532a6f7fd85",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-00b3f498e5f1b171d"
                ],
                "self": true,
                "to_port": -1
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00b3f498e5f1b171d"
                ],
                "self": true,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-00b3f498e5f1b171d"
                ],
                "self": true,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08e7327bb8afa4b5e"
                ],
                "self": false,
                "to_port": 8443
              }
            ],
            "name": "EMR Slave Managed",
            "name_prefix": "",
            "owner_id": "209479308486",
            "revoke_rules_on_delete": true,
            "tags": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap EMR Slave (managed by EMR)",
              "Operator": "Benedict.Chan"
            },
            "tags_all": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap EMR Slave (managed by EMR)",
              "Operator": "Benedict.Chan"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3da344f06a25bb4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.etleap"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "influxdb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209479308486:security-group/sg-03f646e6afe4e9cfe",
            "description": "Etleap InfluxDB",
            "egress": [],
            "id": "sg-03f646e6afe4e9cfe",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8086,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0264fb166e833a732",
                  "sg-09d12e2964da7c4f7"
                ],
                "self": false,
                "to_port": 8086
              }
            ],
            "name": "Etleap InfluxDB",
            "name_prefix": "",
            "owner_id": "209479308486",
            "revoke_rules_on_delete": false,
            "tags": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap InfluxDB",
              "Operator": "Benedict.Chan"
            },
            "tags_all": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap InfluxDB",
              "Operator": "Benedict.Chan"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3da344f06a25bb4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.etleap"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209479308486:security-group/sg-0be47893ef9e46a13",
            "description": "Etleap NAT",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0be47893ef9e46a13",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.22.4.0/24",
                  "172.22.5.0/24",
                  "172.22.6.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "Etleap NAT",
            "name_prefix": "",
            "owner_id": "209479308486",
            "revoke_rules_on_delete": false,
            "tags": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap NAT",
              "Operator": "Benedict.Chan"
            },
            "tags_all": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap NAT",
              "Operator": "Benedict.Chan"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3da344f06a25bb4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.etleap"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "zookeeper",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209479308486:security-group/sg-0e2357864c06db9c1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 2888
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 3888
              }
            ],
            "id": "sg-0e2357864c06db9c1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2181,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0264fb166e833a732",
                  "sg-09d12e2964da7c4f7"
                ],
                "self": false,
                "to_port": 2181
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 2888
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 3888
              }
            ],
            "name": "Etleap zookeeper",
            "name_prefix": "",
            "owner_id": "209479308486",
            "revoke_rules_on_delete": false,
            "tags": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap Zookeeper",
              "Operator": "Benedict.Chan"
            },
            "tags_all": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap Zookeeper",
              "Operator": "Benedict.Chan"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3da344f06a25bb4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.etleap"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app-egress-2181-zookeeper",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2181,
            "id": "sgrule-1476577702",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0264fb166e833a732",
            "security_group_rule_id": "sgr-0a70d4aeb2e3f135b",
            "self": false,
            "source_security_group_id": "sg-0e2357864c06db9c1",
            "timeouts": null,
            "to_port": 2181,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.app",
            "module.vpc.aws_security_group.zookeeper",
            "module.vpc.aws_vpc.etleap"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app-egress-3306-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-1367771204",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0264fb166e833a732",
            "security_group_rule_id": "sgr-0932a7e964bb48ff9",
            "self": false,
            "source_security_group_id": "sg-0c546fe9faceb87a8",
            "timeouts": null,
            "to_port": 3306,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.app",
            "module.vpc.aws_security_group.db",
            "module.vpc.aws_vpc.etleap"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app-egress-443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-1192689749",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0264fb166e833a732",
            "security_group_rule_id": "sgr-0d271cbf603987467",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.app",
            "module.vpc.aws_vpc.etleap"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app-egress-80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3978484363",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0264fb166e833a732",
            "security_group_rule_id": "sgr-0f232763eea310645",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.app",
            "module.vpc.aws_vpc.etleap"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app-egress-8086-influxdb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8086,
            "id": "sgrule-3825566635",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0264fb166e833a732",
            "security_group_rule_id": "sgr-03690ec7b59882731",
            "self": false,
            "source_security_group_id": "sg-03f646e6afe4e9cfe",
            "timeouts": null,
            "to_port": 8086,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.app",
            "module.vpc.aws_security_group.influxdb",
            "module.vpc.aws_vpc.etleap"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app-egress-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-980539195",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0264fb166e833a732",
            "security_group_rule_id": "sgr-00568ac95ab75b76d",
            "self": false,
            "source_security_group_id": "sg-0264fb166e833a732",
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.app",
            "module.vpc.aws_vpc.etleap"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app-egress-emr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-1546560575",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0264fb166e833a732",
            "security_group_rule_id": "sgr-04ce962346e03ea5c",
            "self": false,
            "source_security_group_id": "sg-09d12e2964da7c4f7",
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.app",
            "module.vpc.aws_security_group.emr",
            "module.vpc.aws_vpc.etleap"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app-egress-external",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-56055673",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0264fb166e833a732",
            "security_group_rule_id": "sgr-0679e4f74863853ff",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.app",
            "module.vpc.aws_vpc.etleap"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app-ingress-22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1309607571",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0264fb166e833a732",
            "security_group_rule_id": "sgr-041cd0e59dee1d174",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.app",
            "module.vpc.aws_vpc.etleap"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app-ingress-443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-2571407663",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0264fb166e833a732",
            "security_group_rule_id": "sgr-0c840d7980ceb86ce",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.app",
            "module.vpc.aws_vpc.etleap"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app-ingress-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-806116780",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0264fb166e833a732",
            "security_group_rule_id": "sgr-00568ac95ab75b76d",
            "self": false,
            "source_security_group_id": "sg-0264fb166e833a732",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.app",
            "module.vpc.aws_vpc.etleap"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app-ingress-dms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-3145070691",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ed7ddcc0d8382d2f",
            "security_group_rule_id": "sgr-03cb50717cb065f54",
            "self": false,
            "source_security_group_id": "sg-0264fb166e833a732",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.app",
            "module.vpc.aws_security_group.dms",
            "module.vpc.aws_vpc.etleap"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app-ingress-emr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-1448292008",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0264fb166e833a732",
            "security_group_rule_id": "sgr-04ce962346e03ea5c",
            "self": false,
            "source_security_group_id": "sg-09d12e2964da7c4f7",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.app",
            "module.vpc.aws_security_group.emr",
            "module.vpc.aws_vpc.etleap"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "db-ingress-3306-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-3339789420",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c546fe9faceb87a8",
            "security_group_rule_id": "sgr-042c40dba2996bab8",
            "self": false,
            "source_security_group_id": "sg-0264fb166e833a732",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.app",
            "module.vpc.aws_security_group.db",
            "module.vpc.aws_vpc.etleap"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "dms-egress-443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-2179956504",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ed7ddcc0d8382d2f",
            "security_group_rule_id": "sgr-0cf74bf1af328187d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.dms",
            "module.vpc.aws_vpc.etleap"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "dms-egress-external",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3957252941",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0ed7ddcc0d8382d2f",
            "security_group_rule_id": "sgr-015753b89716f8318",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.dms",
            "module.vpc.aws_vpc.etleap"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "emr-egress-2181-zookeeper",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2181,
            "id": "sgrule-3384764057",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09d12e2964da7c4f7",
            "security_group_rule_id": "sgr-0703e40f6e064b154",
            "self": false,
            "source_security_group_id": "sg-0e2357864c06db9c1",
            "timeouts": null,
            "to_port": 2181,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.emr",
            "module.vpc.aws_security_group.zookeeper",
            "module.vpc.aws_vpc.etleap"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "emr-egress-443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-835738698",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09d12e2964da7c4f7",
            "security_group_rule_id": "sgr-068d5da5124911f17",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.emr",
            "module.vpc.aws_vpc.etleap"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "emr-egress-80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-4043891166",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09d12e2964da7c4f7",
            "security_group_rule_id": "sgr-013a3e5d7adde3154",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.emr",
            "module.vpc.aws_vpc.etleap"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "emr-egress-8086-influxdb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8086,
            "id": "sgrule-1975004308",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09d12e2964da7c4f7",
            "security_group_rule_id": "sgr-0892452599c85c4c1",
            "self": false,
            "source_security_group_id": "sg-03f646e6afe4e9cfe",
            "timeouts": null,
            "to_port": 8086,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.emr",
            "module.vpc.aws_security_group.influxdb",
            "module.vpc.aws_vpc.etleap"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "emr-egress-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-2271810563",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09d12e2964da7c4f7",
            "security_group_rule_id": "sgr-068caabfa5fbd178a",
            "self": false,
            "source_security_group_id": "sg-0264fb166e833a732",
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.app",
            "module.vpc.aws_security_group.emr",
            "module.vpc.aws_vpc.etleap"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "emr-egress-emr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-3778438919",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09d12e2964da7c4f7",
            "security_group_rule_id": "sgr-06e7df8b3d4fbe4dd",
            "self": false,
            "source_security_group_id": "sg-09d12e2964da7c4f7",
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.emr",
            "module.vpc.aws_vpc.etleap"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "emr-egress-external",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-798242958",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-09d12e2964da7c4f7",
            "security_group_rule_id": "sgr-0dda617c5b66e27c1",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.emr",
            "module.vpc.aws_vpc.etleap"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "emr-ingress-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-414449137",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09d12e2964da7c4f7",
            "security_group_rule_id": "sgr-01ae20f01bca3968f",
            "self": false,
            "source_security_group_id": "sg-0264fb166e833a732",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.app",
            "module.vpc.aws_security_group.emr",
            "module.vpc.aws_vpc.etleap"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "emr-ingress-emr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-2129432309",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09d12e2964da7c4f7",
            "security_group_rule_id": "sgr-0a773a94968ad3776",
            "self": false,
            "source_security_group_id": "sg-09d12e2964da7c4f7",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.emr",
            "module.vpc.aws_vpc.etleap"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "emr-service-access-managed-ingress-9443-emr-master-managed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9443,
            "id": "sgrule-2885012979",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08e7327bb8afa4b5e",
            "security_group_rule_id": "sgr-0b52d9a07f8430e78",
            "self": false,
            "source_security_group_id": "sg-00b3f498e5f1b171d",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.emr-master-managed",
            "module.vpc.aws_security_group.emr-service-access-managed",
            "module.vpc.aws_vpc.etleap"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "emr-service-master-managed-egress-9443-emr-access-managed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9443,
            "id": "sgrule-3532697012",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00b3f498e5f1b171d",
            "security_group_rule_id": "sgr-0aeb0723f3ea3c1cb",
            "self": false,
            "source_security_group_id": "sg-08e7327bb8afa4b5e",
            "timeouts": null,
            "to_port": 9443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.emr-master-managed",
            "module.vpc.aws_security_group.emr-service-access-managed",
            "module.vpc.aws_vpc.etleap"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "influxdb-ingress-8086-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8086,
            "id": "sgrule-1375546130",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03f646e6afe4e9cfe",
            "security_group_rule_id": "sgr-08b52ffdfabd3d955",
            "self": false,
            "source_security_group_id": "sg-0264fb166e833a732",
            "timeouts": null,
            "to_port": 8086,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.app",
            "module.vpc.aws_security_group.influxdb",
            "module.vpc.aws_vpc.etleap"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "influxdb-ingress-8086-emr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8086,
            "id": "sgrule-933386262",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03f646e6afe4e9cfe",
            "security_group_rule_id": "sgr-079f309432f5e9e06",
            "self": false,
            "source_security_group_id": "sg-09d12e2964da7c4f7",
            "timeouts": null,
            "to_port": 8086,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.emr",
            "module.vpc.aws_security_group.influxdb",
            "module.vpc.aws_vpc.etleap"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nat-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1608355456",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0be47893ef9e46a13",
            "security_group_rule_id": "sgr-02ddb0a4e8a8970ba",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.nat",
            "module.vpc.aws_vpc.etleap"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nat-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.22.4.0/24",
              "172.22.5.0/24",
              "172.22.6.0/24"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-4060999087",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0be47893ef9e46a13",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.nat",
            "module.vpc.aws_subnet.a_private",
            "module.vpc.aws_subnet.b_private",
            "module.vpc.aws_subnet.c_private",
            "module.vpc.aws_vpc.etleap",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "zookeeper-egress-2888-zookeeper",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2888,
            "id": "sgrule-2135813692",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e2357864c06db9c1",
            "security_group_rule_id": "sgr-03331b3633b8d7baf",
            "self": false,
            "source_security_group_id": "sg-0e2357864c06db9c1",
            "timeouts": null,
            "to_port": 2888,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.zookeeper",
            "module.vpc.aws_vpc.etleap"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "zookeeper-egress-3888-zookeeper",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3888,
            "id": "sgrule-3050759461",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e2357864c06db9c1",
            "security_group_rule_id": "sgr-037e6fc1228a3da27",
            "self": false,
            "source_security_group_id": "sg-0e2357864c06db9c1",
            "timeouts": null,
            "to_port": 3888,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.zookeeper",
            "module.vpc.aws_vpc.etleap"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "zookeeper-egress-443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-143771187",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e2357864c06db9c1",
            "security_group_rule_id": "sgr-0e46f713099ebf736",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.zookeeper",
            "module.vpc.aws_vpc.etleap"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "zookeeper-egress-80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1781231351",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e2357864c06db9c1",
            "security_group_rule_id": "sgr-02920a724a84110c1",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.zookeeper",
            "module.vpc.aws_vpc.etleap"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "zookeeper-ingress-2181-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2181,
            "id": "sgrule-1218072463",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e2357864c06db9c1",
            "security_group_rule_id": "sgr-0b41ef58aa43cc738",
            "self": false,
            "source_security_group_id": "sg-0264fb166e833a732",
            "timeouts": null,
            "to_port": 2181,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.app",
            "module.vpc.aws_security_group.zookeeper",
            "module.vpc.aws_vpc.etleap"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "zookeeper-ingress-2181-emr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2181,
            "id": "sgrule-784678027",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e2357864c06db9c1",
            "security_group_rule_id": "sgr-06bdf10b3d910c1e1",
            "self": false,
            "source_security_group_id": "sg-09d12e2964da7c4f7",
            "timeouts": null,
            "to_port": 2181,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.emr",
            "module.vpc.aws_security_group.zookeeper",
            "module.vpc.aws_vpc.etleap"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "zookeeper-ingress-22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-389755440",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e2357864c06db9c1",
            "security_group_rule_id": "sgr-08f383a1b0b3e439b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.zookeeper",
            "module.vpc.aws_vpc.etleap"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "zookeeper-ingress-2888-zookeeper",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2888,
            "id": "sgrule-2955705615",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e2357864c06db9c1",
            "security_group_rule_id": "sgr-07be23f5b5494e1f5",
            "self": false,
            "source_security_group_id": "sg-0e2357864c06db9c1",
            "timeouts": null,
            "to_port": 2888,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.zookeeper",
            "module.vpc.aws_vpc.etleap"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "zookeeper-ingress-3888-zookeeper",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3888,
            "id": "sgrule-3566030532",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e2357864c06db9c1",
            "security_group_rule_id": "sgr-079997b24e3a9bccb",
            "self": false,
            "source_security_group_id": "sg-0e2357864c06db9c1",
            "timeouts": null,
            "to_port": 3888,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.zookeeper",
            "module.vpc.aws_vpc.etleap"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "a_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209479308486:subnet/subnet-068c886b86199179c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.22.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068c886b86199179c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "209479308486",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap A Private test2",
              "Operator": "Benedict.Chan"
            },
            "tags_all": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap A Private test2",
              "Operator": "Benedict.Chan"
            },
            "vpc_id": "vpc-0a3da344f06a25bb4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.etleap",
            "module.vpc.data.aws_region.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "a_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209479308486:subnet/subnet-0c35b4fa0399d8bcf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.22.7.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c35b4fa0399d8bcf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "209479308486",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap A Public test2",
              "Operator": "Benedict.Chan"
            },
            "tags_all": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap A Public test2",
              "Operator": "Benedict.Chan"
            },
            "vpc_id": "vpc-0a3da344f06a25bb4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.etleap",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "b_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209479308486:subnet/subnet-0ba0b865118de2ace",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.22.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba0b865118de2ace",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "209479308486",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap B Private test2",
              "Operator": "Benedict.Chan"
            },
            "tags_all": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap B Private test2",
              "Operator": "Benedict.Chan"
            },
            "vpc_id": "vpc-0a3da344f06a25bb4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.etleap",
            "module.vpc.data.aws_region.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "b_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209479308486:subnet/subnet-0be8e11b37ab2010f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.22.7.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be8e11b37ab2010f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "209479308486",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap B Public test2",
              "Operator": "Benedict.Chan"
            },
            "tags_all": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap B Public test2",
              "Operator": "Benedict.Chan"
            },
            "vpc_id": "vpc-0a3da344f06a25bb4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.etleap",
            "module.vpc.data.aws_region.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "c_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209479308486:subnet/subnet-0ef6095787e00a891",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.22.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef6095787e00a891",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "209479308486",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap C Private test2",
              "Operator": "Benedict.Chan"
            },
            "tags_all": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap C Private test2",
              "Operator": "Benedict.Chan"
            },
            "vpc_id": "vpc-0a3da344f06a25bb4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.etleap",
            "module.vpc.data.aws_region.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "c_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209479308486:subnet/subnet-0b2e43b4281751a9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.22.7.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2e43b4281751a9d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "209479308486",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap C Public test2",
              "Operator": "Benedict.Chan"
            },
            "tags_all": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap C Public test2",
              "Operator": "Benedict.Chan"
            },
            "vpc_id": "vpc-0a3da344f06a25bb4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.etleap",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "etleap",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209479308486:vpc/vpc-0a3da344f06a25bb4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.22.4.0/22",
            "default_network_acl_id": "acl-040f4be688f400de2",
            "default_route_table_id": "rtb-04d87b880bab24a67",
            "default_security_group_id": "sg-050b3df03f4207e9f",
            "dhcp_options_id": "dopt-0cd905c8e64a2763d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a3da344f06a25bb4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04d87b880bab24a67",
            "owner_id": "209479308486",
            "tags": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap VPC test2",
              "Operator": "Benedict.Chan"
            },
            "tags_all": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap VPC test2",
              "Operator": "Benedict.Chan"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209479308486:vpc-endpoint/vpce-05227f787962fb33a",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-05227f787962fb33a",
            "ip_address_type": "ipv4",
            "owner_id": "209479308486",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0e8c18b8d70414328"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0a3da344f06a25bb4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.etleap",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.main_app[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e0a4106402da2799",
            "arn": "arn:aws:ec2:us-east-1:209479308486:instance/i-0493688dcfae6b056",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 16,
            "cpu_options": [
              {
                "core_count": 16,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvdb",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:209479308486:key/68a29d3d-82f9-4fe5-9f4c-4345c12efc3c",
                "snapshot_id": "snap-0c7b7b571eb55b55e",
                "throughput": 125,
                "volume_id": "vol-0f0f9cb2344875f18",
                "volume_size": 60,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EtleapApp-test2-9cb94f",
            "id": "i-0493688dcfae6b056",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c7a.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "Etleap-Benedict",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-08888cdc8cb13d3df"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08888cdc8cb13d3df",
            "private_dns": "ip-172-22-5-133.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.22.5.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:209479308486:key/68a29d3d-82f9-4fe5-9f4c-4345c12efc3c",
                "throughput": 125,
                "volume_id": "vol-05294bd67da20b161",
                "volume_size": 32,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ba0b865118de2ace",
            "tags": {
              "AppRole": "main",
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap App test2 main",
              "Operator": "Benedict.Chan"
            },
            "tags_all": {
              "AppRole": "main",
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap App test2 main",
              "Operator": "Benedict.Chan"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "volume_tags": {
              "Deployment": "test2",
              "Environment": "sandbox",
              "Name": "Etleap App",
              "Operator": "Benedict.Chan"
            },
            "vpc_security_group_ids": [
              "sg-0264fb166e833a732"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.ssh",
            "module.vpc.aws_cognito_identity_pool.etleap_azure_identity_pool",
            "module.vpc.aws_db_instance.db",
            "module.vpc.aws_db_parameter_group.mysql8-4-etleap",
            "module.vpc.aws_db_subnet_group.db",
            "module.vpc.aws_dms_replication_instance.dms",
            "module.vpc.aws_dms_replication_subnet_group.dms",
            "module.vpc.aws_dynamodb_table.activity-log",
            "module.vpc.aws_emr_cluster.emr",
            "module.vpc.aws_emr_security_configuration.emrfs_sse_kms",
            "module.vpc.aws_glue_catalog_database.iceberg_system_tables_db",
            "module.vpc.aws_iam_instance_profile.app",
            "module.vpc.aws_iam_instance_profile.emr_profile",
            "module.vpc.aws_iam_role.app",
            "module.vpc.aws_iam_role.dms",
            "module.vpc.aws_iam_role.emr",
            "module.vpc.aws_iam_role.emr_default_role",
            "module.vpc.aws_iam_role.intermediate",
            "module.vpc.aws_instance.nat",
            "module.vpc.aws_internet_gateway.etleap",
            "module.vpc.aws_kms_key.etleap_emr_ebs_encryption_key",
            "module.vpc.aws_kms_key.etleap_encryption_key",
            "module.vpc.aws_lb.app",
            "module.vpc.aws_network_interface.main_app",
            "module.vpc.aws_network_interface.zookeeper",
            "module.vpc.aws_route.prod_public",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_s3_bucket.intermediate",
            "module.vpc.aws_s3_object.customer_post_install_script",
            "module.vpc.aws_s3_object.db_init_script",
            "module.vpc.aws_s3_object.influx_db_init_script",
            "module.vpc.aws_secretsmanager_secret.influx_db_api_token",
            "module.vpc.aws_security_group.app",
            "module.vpc.aws_security_group.db",
            "module.vpc.aws_security_group.dms",
            "module.vpc.aws_security_group.emr",
            "module.vpc.aws_security_group.emr-master-managed",
            "module.vpc.aws_security_group.emr-service-access-managed",
            "module.vpc.aws_security_group.emr-slave-managed",
            "module.vpc.aws_security_group.influxdb",
            "module.vpc.aws_security_group.nat",
            "module.vpc.aws_security_group.zookeeper",
            "module.vpc.aws_ssm_parameter.emr_cluster_id",
            "module.vpc.aws_subnet.a_private",
            "module.vpc.aws_subnet.a_public",
            "module.vpc.aws_subnet.b_private",
            "module.vpc.aws_subnet.b_public",
            "module.vpc.aws_subnet.c_private",
            "module.vpc.aws_timestreaminfluxdb_db_instance.influx_db",
            "module.vpc.aws_vpc.etleap",
            "module.vpc.data.aws_ami.nat",
            "module.vpc.data.aws_caller_identity.current",
            "module.vpc.data.aws_iam_policy_document.dms_assume_role",
            "module.vpc.data.aws_region.current",
            "module.vpc.data.aws_secretsmanager_secret_version.influx_db_password",
            "module.vpc.module.admin_password.aws_secretsmanager_secret.secret",
            "module.vpc.module.db_password.aws_secretsmanager_secret.secret",
            "module.vpc.module.db_root_password.aws_secretsmanager_secret.secret",
            "module.vpc.module.db_root_password.aws_secretsmanager_secret_version.secret",
            "module.vpc.module.db_root_password.random_password.secret_value",
            "module.vpc.module.db_support_password.aws_secretsmanager_secret.secret",
            "module.vpc.module.deployment_secret.aws_secretsmanager_secret.secret",
            "module.vpc.module.elva.aws_iam_user.elva",
            "module.vpc.module.elva.aws_lb.elva",
            "module.vpc.module.elva.aws_security_group.elva-elb",
            "module.vpc.module.inbound_queue.aws_sns_topic.etleap-inbound",
            "module.vpc.module.inbound_queue.aws_sqs_queue.etleap-inbound",
            "module.vpc.module.inbound_queue.aws_sqs_queue.etleap-inbound-dlq",
            "module.vpc.module.influx_db_password.aws_secretsmanager_secret.secret",
            "module.vpc.module.influx_db_password.aws_secretsmanager_secret_version.secret",
            "module.vpc.module.influx_db_password.random_password.secret_value",
            "module.vpc.module.setup_password.aws_secretsmanager_secret.secret",
            "module.vpc.module.setup_password.aws_secretsmanager_secret_version.secret",
            "module.vpc.module.setup_password.random_password.secret_value",
            "module.vpc.null_resource.are_influx_db_hostname_and_password_valid",
            "module.vpc.null_resource.emr_configuration_change",
            "module.vpc.random_id.deployment_random"
          ]
        }
      ]
    }
  ]
}